--- a/src/main/java/com/fulinlin/setting/ui/TemplateEditPane.form
+++ b/src/main/java/com/fulinlin/setting/ui/TemplateEditPane.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.fulinlin.setting.ui.TemplateEditPane">
-  <grid id="27dc6" binding="templateEdit" layout-manager="BorderLayout" hgap="2" vgap="2">
+  <grid id="27dc6" binding="mainPenel" layout-manager="BorderLayout" hgap="2" vgap="2">
     <constraints>
       <xy x="19" y="36" width="679" height="642"/>
     </constraints>
@@ -9,60 +9,12 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="ce361" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints border-constraint="North"/>
-        <properties>
-          <enabled value="true"/>
-        </properties>
-        <border type="line">
-          <color color="-1250068"/>
-        </border>
-        <children>
-          <component id="612c0" class="javax.swing.JTextField" binding="templateNameText">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="8e229" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="141" height="16"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="Template Name"/>
-            </properties>
-          </component>
-          <component id="1e47e" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="141" height="16"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="File Encodings"/>
-            </properties>
-          </component>
-          <component id="de81e" class="javax.swing.JTextField" binding="fileEncodingText">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="376" height="27"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-        </children>
-      </grid>
       <grid id="adc0b" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints border-constraint="Center"/>
         <properties/>
         <border type="none"/>
         <children>
-          <tabbedpane id="1f5c6" binding="tabbedPane1" default-binding="true">
+          <tabbedpane id="1f5c6" binding="tabbedPane">
             <constraints border-constraint="Center"/>
             <properties/>
             <border type="none"/>
@@ -70,19 +22,29 @@
               <grid id="7e68e" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <tabbedpane title="Untitled"/>
+                  <tabbedpane title="Type"/>
                 </constraints>
                 <properties/>
-                <border type="none"/>
-                <children/>
+                <border type="none" title=""/>
+                <children>
+                  <component id="c8d46" class="javax.swing.JTable" binding="table">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="50"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <autoResizeMode value="2"/>
+                    </properties>
+                  </component>
+                </children>
               </grid>
-              <grid id="6e8e9" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
+              <grid id="6e8e9" binding="templateEditPenel" layout-manager="BorderLayout" hgap="0" vgap="0">
                 <constraints>
-                  <tabbedpane title="Untitled"/>
+                  <tabbedpane title="Template"/>
                 </constraints>
                 <properties/>
-                <border type="none"/>
+                <border type="none" title=""/>
                 <children/>
               </grid>
             </children>
