--- a/src/main/java/com/fulinlin/setting/ui/TemplateEditPane.form
+++ b/src/main/java/com/fulinlin/setting/ui/TemplateEditPane.form
@@ -19,25 +19,13 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="7e68e" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
+              <grid id="7e68e" binding="typeEditPenel" layout-manager="BorderLayout" hgap="0" vgap="0">
                 <constraints>
                   <tabbedpane title="Type"/>
                 </constraints>
                 <properties/>
                 <border type="none" title=""/>
-                <children>
-                  <component id="c8d46" class="javax.swing.JTable" binding="table">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="50"/>
-                      </grid>
-                    </constraints>
-                    <properties>
-                      <autoResizeMode value="2"/>
-                    </properties>
-                  </component>
-                </children>
+                <children/>
               </grid>
               <grid id="6e8e9" binding="templateEditPenel" layout-manager="BorderLayout" hgap="0" vgap="0">
                 <constraints>
