feat(data): 初始化数据

--- a/src/main/resources/template/defaultTemplate.vm
+++ b/src/main/resources/template/defaultTemplate.vm
@@ -1,3 +1,22 @@
 #set($directoryRoot = "www" )
 #set($templateName = "index.vm" )
 #set($template = "$directoryRoot/$templateName" )
+
+feat(scope): dep
+
+xzcxz
+
+BREAKING CHANGE: ccccc
+
+Closes #22
+
+
+${type}(${scopr}): ${subject}
+
+${body}
+
+BREAKING CHANGE: ${changes}
+
+Closes ${closes}
+
+
