--- a/src/main/java/com/fulinlin/setting/ui/AliasEditor.form
+++ b/src/main/java/com/fulinlin/setting/ui/AliasEditor.form
@@ -19,7 +19,8 @@
           <component id="f72e9" class="javax.swing.JTextField" binding="titleField">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="100" height="-1"/>
+                <minimum-size width="100" height="-1"/>
+                <preferred-size width="200" height="-1"/>
               </grid>
             </constraints>
             <properties/>
@@ -27,7 +28,8 @@
           <component id="7611f" class="javax.swing.JTextField" binding="descriptionField">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <minimum-size width="100" height="-1"/>
+                <preferred-size width="200" height="-1"/>
               </grid>
             </constraints>
             <properties/>
