--- a/src/main/resources/template/defaultTemplate.vm
+++ b/src/main/resources/template/defaultTemplate.vm
@@ -1,7 +1,7 @@
-#if($type)${type}#end#if(${scope})(${scope})#end: #if(${subject})${subject}#end
+#if($type)${type}#end#if($scope)(${scope})#end: #if($subject)${subject}#end
 ${newline}
-#if(${body})${body}#end
+#if($body)${body}#end
 ${newline}
-#if(${changes})BREAKING CHANGE: ${changes}#end
+#if($changes)BREAKING CHANGE: ${changes}#end
 ${newline}
-#if(${closes})Closes ${closes}#end
+#if($closes)Closes ${closes}#end
