--- a/src/main/java/com/fulinlin/ui/CommitPanel.form
+++ b/src/main/java/com/fulinlin/ui/CommitPanel.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="7" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="954" height="629"/>
+      <xy x="20" y="20" width="982" height="629"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -27,16 +27,6 @@
         </constraints>
         <properties>
           <text value="Scope of this change"/>
-        </properties>
-      </component>
-      <component id="549f7" class="javax.swing.JComboBox" binding="changeScope">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <editable value="true"/>
         </properties>
       </component>
       <component id="19a59" class="javax.swing.JLabel">
@@ -115,6 +105,14 @@
         <properties>
           <lineWrap value="true"/>
         </properties>
+      </component>
+      <component id="a244b" class="javax.swing.JTextField" binding="changeScope">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
       </component>
     </children>
   </grid>
