fix(template): change default template
- ${newline} inside if statements

Closes #4

--- a/src/main/resources/template/defaultTemplate.vm
+++ b/src/main/resources/template/defaultTemplate.vm
@@ -1,7 +1,4 @@
 #if($type)${type}#end#if($scope)(${scope})#end: #if($subject)${subject}#end
-${newline}
-#if($body)${body}#end
-${newline}
-#if($changes)BREAKING CHANGE: ${changes}#end
-${newline}
-#if($closes)Closes ${closes}#end
+#if($body)${newline}${newline}${body}#end
+#if($changes)${newline}${newline}BREAKING CHANGE: ${changes}#end
+#if($closes)${newline}${newline}Closes ${closes}#end
