--- a/src/main/java/com/chivenh/ui/CommitPanel.form
+++ b/src/main/java/com/chivenh/ui/CommitPanel.form
@@ -18,7 +18,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Type of change"/>
+          <text value="类型"/>
         </properties>
       </component>
       <component id="b0ac4" class="javax.swing.JLabel">
@@ -26,7 +26,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Scope of this change"/>
+          <text value="影响范围"/>
         </properties>
       </component>
       <component id="19a59" class="javax.swing.JLabel">
@@ -35,7 +35,7 @@
         </constraints>
         <properties>
           <horizontalTextPosition value="2"/>
-          <text value="Short description"/>
+          <text value="标题"/>
         </properties>
       </component>
       <component id="92216" class="javax.swing.JTextField" binding="shortDescription">
@@ -51,7 +51,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Long description"/>
+          <text value="详述"/>
         </properties>
       </component>
       <component id="32600" class="javax.swing.JTextArea" binding="longDescription">
@@ -62,6 +62,7 @@
         </constraints>
         <properties>
           <lineWrap value="true"/>
+          <text value=""/>
         </properties>
       </component>
       <component id="83b17" class="javax.swing.JLabel">
@@ -69,7 +70,7 @@
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Closed issues"/>
+          <text value="完成的工单"/>
         </properties>
       </component>
       <component id="424ce" class="javax.swing.JComboBox" binding="changeType">
@@ -93,7 +94,7 @@
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Breaking changes"/>
+          <text value="不兼容更改说明"/>
         </properties>
       </component>
       <component id="15a33" class="javax.swing.JTextArea" binding="breakingChanges">
