--- a/src/main/java/com/chivenh/ui/CommitPanel.form
+++ b/src/main/java/com/chivenh/ui/CommitPanel.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="9" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1088" height="629"/>
+      <xy x="20" y="20" width="1101" height="629"/>
     </constraints>
     <properties/>
     <border type="none">
@@ -68,22 +68,10 @@
           <text value="详述"/>
         </properties>
       </component>
-      <component id="32600" class="javax.swing.JTextArea" binding="msgLongDescription">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties>
-          <lineWrap value="true"/>
-          <margin top="2" left="6" bottom="2" right="6"/>
-          <text value=""/>
-        </properties>
-      </component>
       <component id="83b17" class="javax.swing.JLabel">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="0" use-parent-layout="false">
-            <preferred-size width="52" height="25"/>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="52" height="17"/>
           </grid>
         </constraints>
         <properties>
@@ -108,17 +96,6 @@
         </constraints>
         <properties/>
       </component>
-      <component id="15a33" class="javax.swing.JTextArea" binding="msgBreakingChanges">
-        <constraints>
-          <grid row="4" column="1" row-span="2" col-span="1" vsize-policy="6" hsize-policy="6" anchor="8" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties>
-          <lineWrap value="true"/>
-          <margin top="2" left="6" bottom="2" right="6"/>
-        </properties>
-      </component>
       <component id="a244b" class="javax.swing.JTextField" binding="msgChangeScope">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -129,7 +106,7 @@
       </component>
       <component id="c313a" class="javax.swing.JLabel">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="32" height="17"/>
           </grid>
         </constraints>
@@ -140,7 +117,7 @@
       </component>
       <component id="d8c63" class="javax.swing.JLabel">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="32" height="17"/>
           </grid>
         </constraints>
@@ -151,15 +128,65 @@
       </component>
       <component id="b2566" class="javax.swing.JLabel">
         <constraints>
-          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="0" use-parent-layout="false">
-            <preferred-size width="52" height="25"/>
+          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="52" height="17"/>
           </grid>
         </constraints>
         <properties>
-          <horizontalTextPosition value="4"/>
+          <horizontalAlignment value="4"/>
+          <horizontalTextPosition value="11"/>
           <text value="工单列表"/>
         </properties>
       </component>
+      <grid id="5a84d" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="4" column="1" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="line">
+          <size top="1" left="1" bottom="1" right="1"/>
+          <color color="-4079167"/>
+        </border>
+        <children>
+          <component id="15a33" class="javax.swing.JTextArea" binding="msgBreakingChanges">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="8" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
+              </grid>
+            </constraints>
+            <properties>
+              <lineWrap value="true"/>
+              <margin top="2" left="6" bottom="2" right="6"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="2f30" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="line">
+          <size top="1" left="1" bottom="1" right="1"/>
+          <color color="-4079167"/>
+        </border>
+        <children>
+          <component id="32600" class="javax.swing.JTextArea" binding="msgLongDescription">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
+              </grid>
+            </constraints>
+            <properties>
+              <lineWrap value="true"/>
+              <margin top="2" left="6" bottom="2" right="6"/>
+              <text value=""/>
+            </properties>
+          </component>
+        </children>
+      </grid>
     </children>
   </grid>
 </form>
