feature(全局): 全局功能重构和优化，增加预填消息回填支持
------
- 模板编辑器优化
- 消息编辑器优化
- 预填消息回填支持，便于二次修改消息内容

--- a/src/main/java/com/chivenh/setting/ui/TemplateEditPane.form
+++ b/src/main/java/com/chivenh/setting/ui/TemplateEditPane.form
@@ -78,7 +78,7 @@
                       <text value="template  explain"/>
                     </properties>
                   </component>
-                  <grid id="6e7a2" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="6e7a2" layout-manager="GridLayoutManager" row-count="10" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -123,12 +123,12 @@
                           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value="  ${changes} 对应提交对话框 '不兼容更改描述'"/>
+                          <text value="  ${changes} 对应提交对话框 '不兼容说明'"/>
                         </properties>
                       </component>
                       <component id="433d9" class="javax.swing.JLabel">
                         <constraints>
-                          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <text value="  ${closes} 对应提交对话框 '完成的工单'"/>
@@ -136,10 +136,34 @@
                       </component>
                       <component id="23ec7" class="javax.swing.JLabel">
                         <constraints>
-                          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value="  ${section} 对应 '\n\n------'"/>
+                          <text value="  ${section} 对应 '\n------\n'"/>
+                        </properties>
+                      </component>
+                      <component id="701e7" class="javax.swing.JLabel">
+                        <constraints>
+                          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="  ${deprecated} 对应提交对话框 '弃用说明'"/>
+                        </properties>
+                      </component>
+                      <component id="aad19" class="javax.swing.JLabel">
+                        <constraints>
+                          <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="  ${hasFooter} changes,deprecated,closes有一项即为'true'"/>
+                        </properties>
+                      </component>
+                      <component id="2bfd0" class="javax.swing.JLabel">
+                        <constraints>
+                          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="  ${breakLine} 对应 '\n'"/>
                         </properties>
                       </component>
                     </children>
