--- a/src/main/java/com/chivenh/ui/CommitPanel.form
+++ b/src/main/java/com/chivenh/ui/CommitPanel.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.chivenh.ui.CommitPanel">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="9" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="11" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1101" height="629"/>
+      <xy x="20" y="20" width="1127" height="629"/>
     </constraints>
     <properties/>
     <border type="none">
@@ -12,7 +12,7 @@
     <children>
       <vspacer id="80732">
         <constraints>
-          <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <component id="8bb2e" class="javax.swing.JLabel">
@@ -23,7 +23,9 @@
         </constraints>
         <properties>
           <horizontalAlignment value="4"/>
-          <text value="类型"/>
+          <labelFor value="424ce"/>
+          <text value="*类型"/>
+          <toolTipText value="*声明的字段为必填项"/>
         </properties>
       </component>
       <component id="b0ac4" class="javax.swing.JLabel">
@@ -34,7 +36,8 @@
         </constraints>
         <properties>
           <horizontalAlignment value="4"/>
-          <text value="影响范围"/>
+          <text value="*影响范围"/>
+          <toolTipText value="*声明的字段为必填项"/>
         </properties>
       </component>
       <component id="19a59" class="javax.swing.JLabel">
@@ -46,16 +49,20 @@
         <properties>
           <horizontalAlignment value="4"/>
           <horizontalTextPosition value="2"/>
-          <text value="标题"/>
+          <text value="*标题"/>
+          <toolTipText value="*声明的字段为必填项"/>
         </properties>
       </component>
       <component id="92216" class="javax.swing.JTextField" binding="msgShortDescription">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <name value="标题"/>
+          <toolTipText value="*声明的字段为必填项"/>
+        </properties>
       </component>
       <component id="a5d3c" class="javax.swing.JLabel">
         <constraints>
@@ -70,7 +77,7 @@
       </component>
       <component id="83b17" class="javax.swing.JLabel">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="0" use-parent-layout="false">
+          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="52" height="17"/>
           </grid>
         </constraints>
@@ -80,17 +87,9 @@
           <text value="完成的"/>
         </properties>
       </component>
-      <component id="424ce" class="javax.swing.JComboBox" binding="msgChangeType">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <model/>
-        </properties>
-      </component>
       <component id="73448" class="javax.swing.JTextField" binding="msgClosedIssues">
         <constraints>
-          <grid row="6" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="8" column="1" row-span="2" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -98,11 +97,13 @@
       </component>
       <component id="a244b" class="javax.swing.JTextField" binding="msgChangeScope">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <name value="影响范围"/>
+        </properties>
       </component>
       <component id="c313a" class="javax.swing.JLabel">
         <constraints>
@@ -128,7 +129,7 @@
       </component>
       <component id="b2566" class="javax.swing.JLabel">
         <constraints>
-          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+          <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="52" height="17"/>
           </grid>
         </constraints>
@@ -141,7 +142,7 @@
       <grid id="5a84d" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="4" column="1" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="1" row-span="2" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="line">
@@ -158,6 +159,7 @@
             <properties>
               <lineWrap value="true"/>
               <margin top="2" left="6" bottom="2" right="6"/>
+              <text value="&lt;不兼容概述&gt;"/>
             </properties>
           </component>
         </children>
@@ -165,7 +167,7 @@
       <grid id="2f30" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="line">
@@ -187,6 +189,61 @@
           </component>
         </children>
       </grid>
+      <component id="2b862" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="6" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="32" height="17"/>
+          </grid>
+        </constraints>
+        <properties>
+          <horizontalAlignment value="4"/>
+          <text value="弃用的"/>
+        </properties>
+      </component>
+      <grid id="e4f78" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="6" column="1" row-span="2" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="line">
+          <size top="1" left="1" bottom="1" right="1"/>
+          <color color="-4079167"/>
+        </border>
+        <children>
+          <component id="8c115" class="javax.swing.JTextArea" binding="msgDeprecated">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="8" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
+              </grid>
+            </constraints>
+            <properties>
+              <lineWrap value="true"/>
+              <margin top="2" left="6" bottom="2" right="6"/>
+              <text value="&lt;弃用概述&gt;"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <component id="6cc48" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="32" height="17"/>
+          </grid>
+        </constraints>
+        <properties>
+          <horizontalAlignment value="4"/>
+          <text value="更改内容"/>
+        </properties>
+      </component>
+      <component id="424ce" class="javax.swing.JComboBox" binding="msgChangeType">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <model/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
