fix: 修复gradle版本以及其他问题

--- a/src/main/java/com/fulinlin/ui/setting/AliasEditor.form
+++ b/src/main/java/com/fulinlin/ui/setting/AliasEditor.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.fulinlin.setting.ui.AliasEditor">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.fulinlin.ui.setting.AliasEditor">
   <grid id="b29ea" binding="myPanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="6" y="111" width="549" height="250"/>
+      <xy x="6" y="111" width="822" height="250"/>
     </constraints>
     <properties/>
     <border type="none"/>
