--- a/src/main/java/com/fulinlin/ui/commit/CommitPanel.form
+++ b/src/main/java/com/fulinlin/ui/commit/CommitPanel.form
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.fulinlin.ui.CommitPanel">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.fulinlin.ui.commit.CommitPanel">
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="7" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="982" height="629"/>
     </constraints>
-    <properties/>
+    <properties>
+      <minimumSize width="900" height="350"/>
+      <preferredSize width="900" height="350"/>
+    </properties>
     <border type="none"/>
     <children>
       <vspacer id="80732">
@@ -57,10 +60,11 @@
       <component id="32600" class="javax.swing.JTextArea" binding="longDescription">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
+            <preferred-size width="150" height="35"/>
           </grid>
         </constraints>
         <properties>
+          <autoscrolls value="true"/>
           <lineWrap value="true"/>
         </properties>
       </component>
@@ -99,7 +103,7 @@
       <component id="15a33" class="javax.swing.JTextArea" binding="breakingChanges">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+            <preferred-size width="150" height="20"/>
           </grid>
         </constraints>
         <properties>
