--- a/src/main/java/com/fulinlin/ui/setting/TemplateEditPanel.form
+++ b/src/main/java/com/fulinlin/ui/setting/TemplateEditPanel.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.fulinlin.setting.ui.TemplateEditPane">
-  <grid id="27dc6" binding="mainPenel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.fulinlin.ui.setting.TemplateEditPanel">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="19" y="36" width="1827" height="642"/>
@@ -46,7 +46,8 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="ab489" binding="typeEditPenel" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="ab489" binding="typeEditPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="type"/>
             </constraints>
@@ -162,7 +163,7 @@
                       <text value="setting  git commit template"/>
                     </properties>
                   </component>
-                  <grid id="ccd4b" binding="templateEditPenel" layout-manager="BorderLayout" hgap="0" vgap="0">
+                  <grid id="ccd4b" binding="templateEditPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
                     <constraints>
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                     </constraints>
