--- a/src/main/java/com/fulinlin/ui/commit/CommitPanel.form
+++ b/src/main/java/com/fulinlin/ui/commit/CommitPanel.form
@@ -16,7 +16,7 @@
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="8bb2e" class="javax.swing.JLabel" binding="typeFieldName">
+      <component id="8bb2e" class="javax.swing.JLabel" binding="typeDescriptionLabel" custom-create="true">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -24,7 +24,7 @@
           <text value="Type of change"/>
         </properties>
       </component>
-      <component id="b0ac4" class="javax.swing.JLabel">
+      <component id="b0ac4" class="javax.swing.JLabel" binding="scopeDescriptionLabel">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -32,7 +32,7 @@
           <text value="Scope of this change"/>
         </properties>
       </component>
-      <component id="19a59" class="javax.swing.JLabel">
+      <component id="19a59" class="javax.swing.JLabel" binding="subjectDescriptionLabel">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -49,7 +49,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="a5d3c" class="javax.swing.JLabel">
+      <component id="a5d3c" class="javax.swing.JLabel" binding="bodyDescriptionLabel">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -68,7 +68,7 @@
           <lineWrap value="true"/>
         </properties>
       </component>
-      <component id="83b17" class="javax.swing.JLabel">
+      <component id="83b17" class="javax.swing.JLabel" binding="closedDescriptionLabel">
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -92,7 +92,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="c313a" class="javax.swing.JLabel">
+      <component id="c313a" class="javax.swing.JLabel" binding="changeDescriptionLabel">
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
