--- a/src/main/java/com/fulinlin/ui/setting/AliasEditor.form
+++ b/src/main/java/com/fulinlin/ui/setting/AliasEditor.form
@@ -44,7 +44,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="89ca8" class="javax.swing.JLabel">
+          <component id="89ca8" class="javax.swing.JLabel" binding="titleFieldLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -52,7 +52,7 @@
               <text value="title"/>
             </properties>
           </component>
-          <component id="d8cf9" class="javax.swing.JLabel">
+          <component id="d8cf9" class="javax.swing.JLabel" binding="descriptionFieldLabel">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
